--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/root.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;900&family=Montserrat:wght@100;400;500;700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Login | Fortes</title>
 </head>
-<body>
-    
+<body class="corpo">
+    <main class="principal">
+        <img src="./assets/img/fortes.png" class="logo">
+        <div class="container_icon">
+            <img src="./assets/img/icon.png" class="icon">
+        </div>
+        <div class="container_login">
+            <div class="login">
+                <input type="email" class="input" placeholder="E-mail"
+                onfocus="this.placeholder=''"
+                onblur="this.placeholder='E-mail'" required>
+                <label class="label">E-mail</label>
+            </div>
+            <div class="login">
+                <input type="text" class="input" placeholder="Senha"
+                onfocus="this.placeholder=''"
+                onblur="this.placeholder='Senha'" required>
+                <label class="label">Senha</label>
+            </div>
+        </div>
+        <div class="container_button">
+            <button class="button">Login</button>
+            <p><a href="#" class="link">Esqueceu sua senha?</a></p>
+        </div>
+    </main>
 </body>
 </html>
