Finalizando a pagina de qrcode/principal

--- a/qrcode.html
+++ b/qrcode.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/root.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/display.css">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/qrcode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;900&family=Montserrat:wght@100;400;500;700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -15,7 +15,26 @@
 </head>
 <body class="corpo">
     <main class="principal">
-        
+        <header class="cabecalho">
+            <div class="container_home">
+                <img src="./assets/img/home.png" class="home">
+            </div>
+            <img src="./assets/img/fortes.png" class="logo">
+            <div class="container_config">
+                <img src="./assets/img/config.png" class="config">
+            </div>
+        </header>
+        <section class="container_principal">
+            <div class="container_btns">
+                <button class="button">Programação</button>
+                <button class="button">Histórico</button>
+            </div>
+            <img src="./assets/img/img_exe.png" class="img_exemplo">
+            <div class="container_submit">
+                <button class="submit">Escanear QR Code</button>
+                <button class="ajuda">?</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
