Acerto final na navegação

--- a/check.html
+++ b/check.html
@@ -19,7 +19,9 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <a href="./opcoes.html">
+                    <img src="./assets/img/voltar.png" class="voltar">
+                </a>
             </div>
             <img src="./assets/img/fortes.png" class="logo">
             <div class="container_config">
@@ -31,8 +33,9 @@
                 <img src="./assets/img/check.png" class="check">
                 <p class="texto">Refeição selecionada com sucesso!</p>
             </div>
-            <button class="button">Ok</button>
+            <a href="./qrcode.html" class="button">Ok</a>
         </section>
     </main>
 </body>
+<script src="./assets/js/nav.js"></script>
 </html>
