--- a/historico.html
+++ b/historico.html
@@ -20,7 +20,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <a href="qrcode.html"><img src="./assets/img/voltar.png" class="voltar"></a>
             </div>
             <h1 class="titulo_page">Histórico</h1>
             <div class="container_config">
@@ -172,5 +172,6 @@
                 </tbody>
             </table>
         </section>
+        <a href="./programacao.html" class="button">Avançar</a>
     </main>
 </body>
