--- a/opcoes.html
+++ b/opcoes.html
@@ -19,7 +19,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <img src="./assets/img/voltar.png" class="voltar" id="voltarOp">
             </div>
             <h2 class="titulo">Opções</h2>
         </header>
@@ -47,9 +47,10 @@
                     </div>
                     <p class="descricao">Aqui vai a descrição da opção 2</p>
                 </div>
-                <button class="button">Confirmar</button>
+                <a href="./check.html" class="button">Confirmar</a>
             </form>
         </section>
     </main>
 </body>
+<script src="assets/js/navOp.js"></script>
 </html>
