--- a/programacao.html
+++ b/programacao.html
@@ -20,7 +20,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <a href="./historico.html"><img src="./assets/img/voltar.png" class="voltar"></a>
             </div>
             <h1 class="titulo_page">Programação</h1>
             <div class="container_config">
