--- a/qrcode.html
+++ b/qrcode.html
@@ -21,17 +21,17 @@
             </div>
             <img src="./assets/img/fortes.png" class="logo">
             <div class="container_config">
-                <img src="./assets/img/config.png" class="config">
+                <a href="./configuracoes.html"><img src="./assets/img/config.png" class="config"></a>
             </div>
         </header>
         <section class="container_principal">
             <div class="container_btns">
-                <button class="button">Programação</button>
-                <button class="button">Histórico</button>
+                <a href="./programacao.html" class="button" id="prog">Programação</a>
+                <a href="./historico.html" class="button" id="hist">Histórico</a>
             </div>
             <img src="./assets/img/img_exe.png" class="img_exemplo">
             <div class="container_submit">
-                <button class="submit">Escanear QR Code</button>
+                <a href="./qrcode2.html" class="submit" id="qrcode">Escanear QR Code</a>
                 <button class="ajuda">?</button>
             </div>
         </section>
