--- a/senha.html
+++ b/senha.html
@@ -20,7 +20,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="home">
+               <a href="./index.html"><img src="./assets/img/voltar.png" class="voltar"></a>
             </div>
             <img src="./assets/img/fortes.png" class="logo">
             <div class="container_config">
@@ -38,8 +38,9 @@
                 <input type="number" class="input" required>
             </div>
             <div class="container_button">
-                <button class="button" id="btn">Enviar</button>
+                <a href="./index.html" class="button" id="btn">Enviar</a>
             </div>
         </form>
     </main>
 </body>
+</html>
