--- a/configuracoes.html
+++ b/configuracoes.html
@@ -20,7 +20,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <a href="./qrcode.html"><img src="./assets/img/voltar.png" class="voltar"></a>
             </div>
             <h1 class="titulo_page">Configurações</h1>
             <div class="container_config">
@@ -45,12 +45,12 @@
                     <p class="texto">Notificação</p>
                     <img src="./assets/img/toggle.png" class="icon">
                 </div>
-                <div class="funcao">
+                <a href="./idioma.html" class="funcao">
                     <p class="texto">Idioma</p>
                     <img src="./assets/img/idioma.png" class="icon">
-                </div>
+                </a>
             </div>
-            <button class="btn_fim">Salvar alterações</button>
+            <a href="./qrcode.html" class="btn_fim">Salvar alterações</a>
         </section>
     </main>
 </body>
