--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="container_button">
                 <button class="button" id="btn">Login</button>
-                <p><a href="#" class="link">Esqueceu sua senha?</a></p>
+                <p><a href="./senha.html" class="link">Esqueceu sua senha?</a></p>
             </div>
         </form>
     </main>
