--- a/qrcode2.html
+++ b/qrcode2.html
@@ -19,7 +19,7 @@
     <main class="principal">
         <header class="cabecalho">
             <div class="container_home">
-                <img src="./assets/img/voltar.png" class="voltar">
+                <a href="qrcode.html"><img src="./assets/img/voltar.png" class="voltar"></a>
             </div>
             <img src="./assets/img/fortes.png" class="logo">
             <div class="container_config">
@@ -32,6 +32,7 @@
                 <img src="./assets/img/camera.png" class="camera">
             </div>
         </section>
+        <a href="./opcoes.html" class="button">Avançar</a>
     </main>
 </body>
 </html>
